--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* google homepage styles */
+* {
+  box-sizing: border-box;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -97,9 +101,8 @@ img:hover {
 
 input {
   width: 584px;
-  height: 40px;
-  padding-left: 16px;
-  padding: 5px 9px 0;
+  height: 44px;
+  padding: 9px 16px;
   border-radius: 1px;
   border: 1px solid #eaeaea;
   outline: none;
